major cleanup of old code that didn't work

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -254,7 +254,7 @@
     "    return masked_image\n",
     "\n",
     "\n",
-    "def draw_lines(img, lines, color=[255, 0, 0], thickness=10, previous_lines=None, center_points=None):\n",
+    "def draw_lines(img, lines, color=[255, 0, 0], thickness=10, previous_lines=None, roi=None):\n",
     "    \"\"\"\n",
     "    NOTE: this is the function you might want to use as a starting point once you want to \n",
     "    average/extrapolate the line segments you detect to map out the full\n",
@@ -273,174 +273,73 @@
     "    \"\"\"\n",
     "\n",
     "    if len(lines) == 0:\n",
+    "        print(\"warning: draw_lines called with no lines\")\n",
     "        return\n",
     "    \n",
+    "    topleft, topright, bottomleft, bottomright = roi.reshape([4, 2])\n",
+    "\n",
     "    def length(line):\n",
     "        length = 0\n",
     "        for x1,y1,x2,y2 in line:\n",
     "            length += math.sqrt((x2-x1)**2 + (y2-y1)**2)\n",
     "        \n",
     "        return length\n",
-    "        \n",
-    "    weights = [length(line) for line in lines]\n",
-    "    \n",
-    "    max_weight = max(weights)\n",
-    "    weights = [weight/max_weight for weight in weights]\n",
-    "    \n",
-    "    def slope(line):\n",
-    "        for x1, y1, x2, y2 in line:\n",
-    "            return (y2-y1) / (x2-x1)\n",
-    "        \n",
-    "    slopes = [slope(line) for line in lines]\n",
-    "    \n",
-    "#     plt.figure()\n",
-    "#     plt.hist(slopes, weights=weights, bins=50)\n",
-    "    \n",
-    "    def weighted_mean(values, weights):\n",
-    "        return sum([value*weight for value, weight in zip(values, weights)])/sum(weights)\n",
-    "    \n",
-    "    def select_with_weights(values, weights, test, lines):\n",
-    "        return zip(*[[value, weight, line] for value, weight, line in zip(values, weights, lines) if test(value)])\n",
-    "    \n",
-    "    mean_slope = weighted_mean(slopes, weights)\n",
-    "    #print(mean_slope)\n",
-    "    \n",
-    "    try:\n",
-    "        left_slopes, left_weights, left_lines = select_with_weights(slopes, weights, lambda slope: slope < mean_slope, lines)\n",
-    "        right_slopes, right_weights, right_lines = select_with_weights(slopes, weights, lambda slope: slope > mean_slope, lines)\n",
-    "    except ValueError:\n",
-    "        return\n",
-    "    \n",
-    "    mean_left_slope = weighted_mean(left_slopes, left_weights)\n",
-    "    mean_right_slope = weighted_mean(right_slopes, right_weights)\n",
-    "    \n",
-    "        \n",
-    "    for line in left_lines:\n",
-    "        for x1,y1,x2,y2 in line:\n",
-    "            cv2.line(img, (x1, y1), (x2, y2), [0, 255, 0], 2)\n",
-    "    \n",
-    "        \n",
-    "    for line in right_lines:\n",
-    "        for x1,y1,x2,y2 in line:\n",
-    "            cv2.line(img, (x1, y1), (x2, y2), [0, 255, 255], 2)\n",
-    "            \n",
-    "    def intersection_point(slope1, x1, y1, x2, y2):\n",
-    "        def intersection(m1, b1, m2, b2):\n",
-    "            assert(m1 != m2)\n",
-    "\n",
-    "            # algorithm from https://en.wikipedia.org/wiki/Line%E2%80%93line_intersection\n",
-    "            x = (b2-b1)/(m1-m2)\n",
-    "            y = m1*(x) + b1\n",
-    "            return int(x), int(y)\n",
-    "        \n",
-    "        slope2 = -1 / slope1\n",
-    "        b1 = y1 - slope1 * x1\n",
-    "        b2 = y2 - slope2 * x2\n",
-    "        return intersection(slope1, b1, slope2, b2)\n",
-    "    \n",
-    "    def intersection_lines(m1, b1, m2, b2):\n",
-    "        assert(m1 != m2)\n",
-    "\n",
-    "        # algorithm from https://en.wikipedia.org/wiki/Line%E2%80%93line_intersection\n",
-    "        x = (b2-b1)/(m1-m2)\n",
-    "        y = m1*(x) + b1\n",
-    "        return int(x), int(y)\n",
-    "    \n",
-    "    def best_fit_line(lines, weights, mean_slope):\n",
-    "        \n",
-    "        def best_fit_line_least_squares(lines, weights):\n",
-    "            x = []\n",
-    "            y = []\n",
-    "            \n",
-    "            for line, weight in zip(lines, weights):\n",
-    "                for x1, y1, x2, y2 in line:\n",
-    "                    x.append(x1)\n",
-    "                    x.append(x2)\n",
-    "                    y.append(y1)\n",
-    "                    y.append(y2)\n",
-    "\n",
-    "                    cv2.circle(img, (x1,y1), 10, [0, 0, 255], thickness=-1) \n",
-    "                    cv2.circle(img, (x2,y2), 10, [0, 0, 255], thickness=-1) \n",
-    "                    \n",
-    "            A = np.vstack([x, np.ones(len(x))]).T\n",
-    "            m, c = np.linalg.lstsq(A, y)[0]\n",
-    "            \n",
-    "            return m, c\n",
-    "            \n",
-    "        m, c = best_fit_line_least_squares(lines, weights)            \n",
-    "        \n",
-    "        return m, c\n",
-    "        \n",
-    "        sorted_lines_weights = sorted(zip(lines, weights), key=lambda x: x[1], reverse=True)\n",
-    "        line_start_x, line_start_y, _, _ = sorted_lines_weights[0][0][0] #first line_weight pair, line portion, line container\n",
     "                \n",
-    "        candidates = []\n",
-    "        \n",
-    "        for line, weight in sorted_lines_weights:\n",
-    "            if abs(slope(line) - mean_slope) > .1:\n",
-    "                continue\n",
+    "    def best_fit_line_least_squares(lines):\n",
+    "        x = []\n",
+    "        y = []\n",
     "\n",
-    "            MAX_SEGMENT_DISTANCE = 10\n",
-    "            \n",
+    "        for line in lines:\n",
     "            for x1, y1, x2, y2 in line:\n",
-    "                candidate_x, candidate_y = intersection_point(mean_slope, line_start_x, line_start_y, x1, y1)\n",
-    "                distance = length([[candidate_x, candidate_y, x1, y1]])\n",
-    "                if distance < MAX_SEGMENT_DISTANCE:\n",
-    "                    candidates.append([candidate_x, candidate_y])\n",
-    "                    \n",
-    "                cv2.circle(img, (candidate_x, candidate_y), 5, [0, 0, 255])\n",
-    "                \n",
-    "                candidate_x, candidate_y = intersection_point(mean_slope, line_start_x, line_start_y, x2, y2)\n",
-    "                distance = length([[candidate_x, candidate_y, x2, y2]])\n",
-    "                if distance < MAX_SEGMENT_DISTANCE:\n",
-    "                    candidates.append([candidate_x, candidate_y])\n",
-    "                    \n",
-    "                cv2.circle(img, (candidate_x, candidate_y), 5, [0, 0, 255])\n",
+    "                x.append(x1)\n",
+    "                x.append(x2)\n",
+    "                y.append(y1)\n",
+    "                y.append(y2)\n",
     "\n",
-    "                    \n",
-    "        try:\n",
-    "            start = min(candidates, key=lambda c: c[0])\n",
-    "            end = max(candidates, key=lambda c: c[0])\n",
-    "        except ValueError:\n",
-    "            start = end = (line_start_x, line_start_y)\n",
-    "            \n",
-    "        return tuple(start), tuple(end)\n",
-    "    \n",
-    "    \n",
-    "    def split_lines(lines, weight):\n",
+    "                cv2.circle(img, (x1,y1), 10, [0, 0, 255], thickness=-1) \n",
+    "                cv2.circle(img, (x2,y2), 10, [0, 0, 255], thickness=-1) \n",
+    "\n",
+    "        A = np.vstack([x, np.ones(len(x))]).T\n",
+    "        m, c = np.linalg.lstsq(A, y)[0]\n",
+    "\n",
+    "        return m, c\n",
+    "                \n",
+    "    def split_lines(lines):\n",
+    "        center_points = [(topright[0] - topleft[0]) / 2 + topleft[0], (bottomright[0] - bottomleft[0]) / 2 + bottomleft[0]]\n",
     "        cx1, cx2 = center_points\n",
     "        \n",
     "        left_lines = []\n",
-    "        left_weights = []\n",
-    "        \n",
-    "        right_lines = []\n",
-    "        right_weights = []\n",
-    "        \n",
+    "        right_lines = []        \n",
     "        passed_lines = []\n",
     "        \n",
-    "        for line, weight in zip(lines, weights):\n",
+    "        for line in lines:\n",
     "            x1, y1, x2, y2 = line[0]\n",
     "            \n",
     "            if min(x1, x2) < cx1 and max(x1, x2) < cx2:\n",
     "                left_lines.append(line)\n",
-    "                left_weights.append(weight)\n",
     "            elif min(x1, x2) > cx1 and max(x1, x2) > cx2:\n",
     "                right_lines.append(line)\n",
-    "                right_weights.append(weight)\n",
     "            else:\n",
     "                passed_lines.append(line)\n",
     "                \n",
     "        #print(\"left: {}, right: {}, passed: {}\".format(len(left_lines), len(right_lines), len(passed_lines)))\n",
     "        \n",
-    "        return left_lines, left_weights, right_lines, right_weights\n",
+    "        return left_lines, right_lines\n",
     "                \n",
     "    \n",
-    "    left_lines, left_weights, right_lines, right_weights = split_lines(lines, weights)\n",
+    "    left_lines, right_lines = split_lines(lines)\n",
     "    \n",
-    "    leftM, leftC = best_fit_line(left_lines, left_weights, mean_left_slope)\n",
-    "    rightM, rightC = best_fit_line(right_lines, right_weights, mean_right_slope)\n",
-    "    \n",
+    "    for line in left_lines:\n",
+    "        for x1,y1,x2,y2 in line:\n",
+    "            cv2.line(img, (x1, y1), (x2, y2), [0, 255, 0], 2)\n",
+    "        \n",
+    "    for line in right_lines:\n",
+    "        for x1,y1,x2,y2 in line:\n",
+    "            cv2.line(img, (x1, y1), (x2, y2), [0, 255, 255], 2)\n",
     "\n",
+    "    \n",
+    "    leftM, leftC = best_fit_line_least_squares(left_lines)\n",
+    "    rightM, rightC = best_fit_line_least_squares(right_lines)\n",
     "    \n",
     "    if previous_lines:\n",
     "        [p_leftM, p_leftC], [p_rightM, p_rightC] = previous_lines\n",
@@ -452,20 +351,19 @@
     "                    prev[0], simple[0], abs(prev[0]-simple[0]), prev[1], simple[1], abs(prev[1]-simple[1])))\n",
     "                \n",
     "            print(\"mean slope: {}\".format(mean_slope))\n",
-    "            for element in zip(lines, weights):\n",
-    "                print(element)  \n",
+    "            for line in lines:\n",
+    "                print(line)  \n",
     "                \n",
     "        leftM = (leftM + p_leftM) / 2\n",
     "        rightM = (rightM + p_rightM) / 2\n",
     "        leftC = (leftC + p_leftC) / 2\n",
     "        rightC = (rightC + p_rightC) / 2\n",
     "    \n",
-    "    left1 = (int((540-leftC)/leftM), 540)\n",
-    "    right1 = (int((540-rightC)/rightM), 540)\n",
+    "    left1 = (int((bottomleft[1]-leftC)/leftM), bottomleft[1])\n",
+    "    right1 = (int((bottomright[1]-rightC)/rightM), bottomright[1])\n",
     "    \n",
-    "    #left2 = right2 = intersection_lines(leftM, leftC, rightM, rightC)\n",
-    "    left2 = (int((325-leftC)/leftM), 325)\n",
-    "    right2 = (int((325-rightC)/rightM), 325)\n",
+    "    left2 = (int((topleft[1]-leftC)/leftM), topleft[1])\n",
+    "    right2 = (int((topright[1]-rightC)/rightM), topright[1])\n",
     "        \n",
     "    cv2.line(img, left1, left2, color, thickness)\n",
     "    cv2.line(img, right1, right2, color, thickness)\n",
@@ -473,7 +371,7 @@
     "    return [leftM, leftC], [rightM, rightC]\n",
     "        \n",
     "\n",
-    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, previous_lines, center_points):\n",
+    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, previous_lines, roi):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
     "        \n",
@@ -481,7 +379,7 @@
     "    \"\"\"\n",
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
-    "    simple_lines = draw_lines(line_img, lines, previous_lines=previous_lines, center_points=center_points)\n",
+    "    simple_lines = draw_lines(line_img, lines, previous_lines=previous_lines, roi=roi)\n",
     "    return line_img, simple_lines\n",
     "\n",
     "# Python 3 has support for cool math symbols.\n",
@@ -509,7 +407,6 @@
     "    topright = (555, 325)\n",
     "    bottomleft = (120, 540)\n",
     "    bottomright = (950, 540)\n",
-    "    center_points = [(topright[0] - topleft[0]) / 2 + topleft[0], (bottomright[0] - bottomleft[0]) / 2 + bottomleft[0]]\n",
     "        \n",
     "    vertices = np.array([[topleft, topright, bottomright, bottomleft]], dtype=np.int32)\n",
     "    image_roi = region_of_interest(image_blur, vertices)\n",
@@ -519,7 +416,7 @@
     "    threshold = 10     # minimum number of votes (intersections in Hough grid cell)\n",
     "    min_line_length = 15 #minimum number of pixels making up a line\n",
     "    max_line_gap = 3    # maximum gap in pixels between connectable line segments\n",
-    "    image_hough, simple_lines = hough_lines(image_roi, rho, theta, threshold, min_line_length, max_line_gap, previous_lines, center_points)\n",
+    "    image_hough, simple_lines = hough_lines(image_roi, rho, theta, threshold, min_line_length, max_line_gap, previous_lines, roi=vertices)\n",
     "\n",
     "    return (image_hough, [image_gray, image_canny, image_blur, image_roi, simple_lines])\n",
     "\n",
